src/snapshots/squawk__parse__tests__create_access_method_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateAmStmt(
                    Object({
                        "amname": String(
                            "heptree",
                        ),
                        "amtype": String(
                            "i",
                        ),
                        "handler_name": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "heptree_handler",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    63,
                ),
            },
        ),
    ],
)
