src/snapshots/squawk__parse__tests__create_domain_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateDomainStmt(
                    Object({
                        "constraints": Array([
                            Object({
                                "Constraint": Object({
                                    "contype": Number(
                                        4,
                                    ),
                                    "initially_valid": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        38,
                                    ),
                                    "raw_expr": Object({
                                        "BoolExpr": Object({
                                            "args": Array([
                                                Object({
                                                    "A_Expr": Object({
                                                        "kind": Number(
                                                            0,
                                                        ),
                                                        "lexpr": Object({
                                                            "ColumnRef": Object({
                                                                "fields": Array([
                                                                    Object({
                                                                        "String": Object({
                                                                            "str": String(
                                                                                "value",
                                                                            ),
                                                                        }),
                                                                    }),
                                                                ]),
                                                                "location": Number(
                                                                    48,
                                                                ),
                                                            }),
                                                        }),
                                                        "location": Number(
                                                            54,
                                                        ),
                                                        "name": Array([
                                                            Object({
                                                                "String": Object({
                                                                    "str": String(
                                                                        "~",
                                                                    ),
                                                                }),
                                                            }),
                                                        ]),
                                                        "rexpr": Object({
                                                            "A_Const": Object({
                                                                "location": Number(
                                                                    56,
                                                                ),
                                                                "val": Object({
                                                                    "String": Object({
                                                                        "str": String(
                                                                            "^\\d{5}$",
                                                                        ),
                                                                    }),
                                                                }),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                                Object({
                                                    "A_Expr": Object({
                                                        "kind": Number(
                                                            0,
                                                        ),
                                                        "lexpr": Object({
                                                            "ColumnRef": Object({
                                                                "fields": Array([
                                                                    Object({
                                                                        "String": Object({
                                                                            "str": String(
                                                                                "value",
                                                                            ),
                                                                        }),
                                                                    }),
                                                                ]),
                                                                "location": Number(
                                                                    69,
                                                                ),
                                                            }),
                                                        }),
                                                        "location": Number(
                                                            75,
                                                        ),
                                                        "name": Array([
                                                            Object({
                                                                "String": Object({
                                                                    "str": String(
                                                                        "~",
                                                                    ),
                                                                }),
                                                            }),
                                                        ]),
                                                        "rexpr": Object({
                                                            "A_Const": Object({
                                                                "location": Number(
                                                                    77,
                                                                ),
                                                                "val": Object({
                                                                    "String": Object({
                                                                        "str": String(
                                                                            "^\\d{5}-\\d{4}$",
                                                                        ),
                                                                    }),
                                                                }),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            ]),
                                            "boolop": Number(
                                                1,
                                            ),
                                            "location": Number(
                                                66,
                                            ),
                                        }),
                                    }),
                                }),
                            }),
                        ]),
                        "domainname": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "us_postal_code",
                                    ),
                                }),
                            }),
                        ]),
                        "typeName": Object({
                            "TypeName": Object({
                                "location": Number(
                                    33,
                                ),
                                "names": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "text",
                                            ),
                                        }),
                                    }),
                                ]),
                                "typemod": Number(
                                    -1,
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    94,
                ),
            },
        ),
    ],
)
