src/snapshots/squawk__parse__tests__create_enum_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateEnumStmt(
                    Object({
                        "typeName": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "happiness",
                                    ),
                                }),
                            }),
                        ]),
                        "vals": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "happy",
                                    ),
                                }),
                            }),
                            Object({
                                "String": Object({
                                    "str": String(
                                        "very happy",
                                    ),
                                }),
                            }),
                            Object({
                                "String": Object({
                                    "str": String(
                                        "ecstatic",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    66,
                ),
            },
        ),
    ],
)
