src/snapshots/squawk__parse__tests__create_extension.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateExtensionStmt(
                    Object({
                        "extname": String(
                            "hstore",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    23,
                ),
            },
        ),
    ],
)
