src/snapshots/squawk__parse__tests__create_foreign_data_wrapper.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateFdwStmt(
                    Object({
                        "fdwname": String(
                            "dummy",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
