src/snapshots/squawk__parse__tests__create_plang_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreatePLangStmt(
                    Object({
                        "plhandler": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "plpgsql_call_handler",
                                    ),
                                }),
                            }),
                        ]),
                        "plname": String(
                            "plpgsql",
                        ),
                        "pltrusted": Bool(
                            true,
                        ),
                        "plvalidator": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "plpgsql_validator",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    108,
                ),
            },
        ),
    ],
)
